--- a/packages/shorebird_code_push_client/pubspec.yaml
+++ b/packages/shorebird_code_push_client/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   http: ^1.0.0
   shorebird_code_push_protocol:
-    path: ../shorebird_code_push_protocol
+    git:
+      url: https://github.com/shorebirdtech/shorebird
+      path: packages/shorebird_code_push_protocol
 
 dev_dependencies:
   build_runner: ^2.0.0
